p5.js@2が型に対応したので更新

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,9 @@
-html, body {
-  margin: 0;
-  overflow: hidden;
+html,
+body {
+	margin: 0;
+	overflow: hidden;
 }
 
 canvas {
-  display: block;
+	display: block;
 }
